fix overflow caledq page

--- a/components/CalendQView/CalendQView.module.scss
+++ b/components/CalendQView/CalendQView.module.scss
@@ -1,3 +1,7 @@
+.CalendQView {
+  overflow-x: hidden;
+}
+
 .ImageContainer {
   width: 100%;
   span {
